# fastapi_homework

./: .env  .gitignore  pyproject.toml  readme  test_main.http
docker/postgres/: Dockerfile  create_database.sql
src/: main.py
src/configurations/: database.py  settings.py
src/models/: books.py  sellers.py
src/routers/: __init__.py
src/routers/v1/: books.py  sellers.py
src/schemas/: sellers.py
