[tool.poetry]
name = "homework-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.29.0"
fastapi = "^0.110.0"
pydantic = "^2.6.3"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
orjson = "^3.9.15"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
